--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.22", features = ["cargo"] }
+serde = { version = "1.0.144", features = ["derive"] }
+serde_json = "1.0.85"
 surrealdb = "1.0.0-beta.7"
-tokio = "1.21.1"
+tokio = { version = "1.21.1", features = ["full"] }
+
