--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.2.22", features = ["cargo", "derive"] }
+map-macro = "0.2.4"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 surrealdb = "1.0.0-beta.7"
